<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">METAL GEAR SOLID Quiz Free</string>
    <string name="app_name_profile">METAL GEAR SOLID Quiz Profile</string>
    <string name="app_name_register">METAL GEAR SOLID Quiz \nregister</string>
    <string name="aboutAdsReset">RESET SETTINGS</string>
    <string name="aboutAdsResetTitle">Reset your settings for ads</string>
    <string name="aboutAdsResetDesc">Tap on the text below to reset your settings for ads and to show the dialog for settings again.\n\nPlease note: this function requires an Internet connection.</string>
    <string name="aboutBirthday"><b>Date of Birth</b></string>
    <string name="aboutBirthdayDesc">This app is not subject to any age restrictions. So why this information? Hm&#8230; that is a good question! Maybe we should "experiment" with it to see what happens?
        \nIt would still be nice if you enter at least your correct year of birth.</string>
    <string name="aboutContact"><b>Contact</b></string>
    <string name="aboutContactDesc">E-Mail:\t <u>dev.hq.smi@gmail.com</u>\nOr use the feedback menu in the main menu to generate an e-mail.</string>
    <string name="aboutDeleteProfile"><b>Can I delete my profile?</b></string>
    <string name="aboutDeleteProfileDesc">Yes, please send an e-mail to <u>dev.hq.smi@gmail.com</u>.
        Please note you have to send the deletion request from the email address you are registered with in the app! After deleting your profile, your data cannot be restored.</string>
    <string name="aboutEmail"><b>E-mail address</b></string>
    <string name="aboutEmailDesc">Is needed to create a profile. This will allow your game data to be loaded if you uninstall the app and reinstall it later. You can also create a new password if you forget your current one.</string>
    <string name="aboutPrivacyPolicy">Privacy Policy</string>
    <string name="aboutPrivacyPolicyDesc">show privacy policy\n\ntap here</string>
    <string name="aboutTitle">App FAQs</string>
    <string name="aboutOther"><b>Other</b></string>
    <string name="aboutOtherDesc">This app uses CountryCodePickerProject library released under the Apache 2.0 license.
        \n
        <u>https://github.com/hbb20/CountryCodePickerProject</u>
        \n
        <u>https://www.apache.org/licenses/LICENSE-2.0</u>
        \n\nThis app is also featuring Music by Matthew Pablo
        \nhttp://www.matthewpablo.com
    </string>
    <string name="aboutSupportApp">Support app development</string>
    <string name="aboutSupportAppDesc">If you like the app, please consider buying a PRO version. For the small price you not only get an ad-free app, but you also support future development and online functionality.
        \n\nPlease note: There are no additional features in the PRO version!\n\n</string>
    <string name="aboutSupportAppLink"><u>Show Metal Gear Solid Quiz Pro</u></string>
    <string name="aboutUsername"><b>Username</b></string>
    <string name="aboutUsernameDesc">You will be listed in the ranking system under this name. This name is freely selectable and is visible for everyone as soon as you appear in the ranking system.
        \nPlease note: Profiles with vulgar, offensive and / or right-wing extremist usernames will be deleted.</string>
    <string name="aboutWhatDataStored"><b>What data is stored and for what purpose?</b></string>
    <string name="aboutWhatDataStoredDesc">Username, email address, date of birth, country, gender, screen resolution, Android version and game data (e.g. scores in each category).
        \n\n
        User name, e-mail address, date of birth, country and gender are user entries and are not read from the device. So you can enter whatever you want.
        \n\n
        Country and gender are used for anonymous user statistics.
        \n\n
        Screen resolution and Android version is used to optimize the app for different screen sizes and Android versions.</string>
    <string name="account_created_successfully">Account has been created successfully.</string>
    <string name="birthday_date">Enter your birthday</string>
    <string name="birthday_date_hint">your birthday</string>
    <string name="birthdayUser">birthday:\t %1$s</string>
    <string name="b0000">Happy birthday, %1$s!</string>
    <string name="b0000_1">Oh, the big day is already tomorrow! :-)</string>
    <string name="b0000_2">The countdown is running. There are just 2 days left!</string>
    <string name="b0000_3">The countdown is running. There are just 3 days left!</string>
    <string name="b0000_4">The countdown is running. There are just 4 days left!</string>
    <string name="b0000_xx">This special day is %1$d days away!</string>
    <string name="b3001na">Happy birthday, \"%1$s\"!</string>
    <string name="b3001na_sh">o.O ??????</string>
    <string name="b3001na_td">Is that you, MAN?</string>
    <string name="b0602di">Happy birthday, %1$s!\nThose magic words will be missed.</string>
    <string name="b0602di_sh">Snnnn.... no, not yet. %1$s So we have to wait a little bit longer.</string>
    <string name="b0602di_td">Snaaaaaakeeeeee!</string>
    <string name="b0508ei">Happy birthday, %1$s!\nDon\'t be silent today. :-)</string>
    <string name="b0508ei_sh">Will that day be a quiet day?</string>
    <string name="b0508ei_td">Don\'t worry about vocal cord parasites.</string>
    <string name="b2408oe">Happy birthday, %1$s!\nThank you for all the good memories.</string>
    <string name="b2408oe_sh">%1$s \nThen somebody also celebrates birthday who has given us a lot of joy.</string>
    <string name="b2408oe_td">We all looking forward to this date, great master. :-)</string>
    <string name="b2512ij">Happy birthday %1$s and have fun painting!</string>
    <string name="b2512ij_sh">Will we see some cool pictures that day?</string>
    <string name="b2512ij_td">Hope you like the style. :-)</string>
    <string name="category">Category: %1$s</string>
    <string name="categoryNormal">Normal</string>
    <string name="categoryHard">Hard</string>
    <string name="chooseCategory">choose a category</string>
    <string name="comrade">comrade</string>
    <string name="confirm">Confirm</string>
    <string name="congratsScoreNewHighscore">
        Congratulation &lt;br>&lt;b>%1$s&lt;/b>
        &lt;br>You\'ve reached a new high score for a single &lt;b>%2$s&lt;/b> category on &lt;b>%3$s&lt;/b> difficulty!</string>
    <string name="congratsScoreHighscoreAgain">
        Congratulation &lt;br>&lt;b>%1$s&lt;/b>
        &lt;br>You\'ve reached a max score for a single &lt;b>%2$s&lt;/b> category on &lt;b>%3$s&lt;/b> difficulty once again!
        &lt;br><i>Is that you, Hideo?</i></string>
    <string name="congratsScoreSameScore">
        Congratulation &lt;br>&lt;b>%1$s&lt;/b>
        &lt;br>You\'ve reached %2$d points for a single &lt;b>%3$s&lt;/b> category on &lt;b>%4$s&lt;/b> difficulty once again!
        &lt;br>With a bit more training you can reach new high scores!</string>
    <string name="congratsScoreLessScore">
        Is there something wrong &lt;br>&lt;b>%1$s&lt;/b>?
        &lt;br>You\'ve already shown that you can do better than this. Let\'s try again. Make
        Hideo proud and show the whole world your true knowledge!</string>
    <string name="congratsScoreGeneral">
        Hm&#x2026; That was just to warm up. &lt;br>&lt;b>%1$s&lt;/b>
        &lt;br>Let\'s try again and show everyone that you can do much better!</string>
    <string name="conAbout">About</string>
    <string name="conFAQ">FAQs</string>
    <string name="conProfile">Profile</string>
    <string name="conTellAFriend">Invite a friend</string>
    <string name="conSendRequest">send a request</string>
    <string name="conStartGame">Start New Quiz</string>
    <string name="conStatistics">Statistics</string>
    <string name="conWorld">World Rankings</string>
    <string name="contactAdress" translatable="false">dev.hq.smi@gmail.com</string>
    <string name="country">country:</string>
    <string name="create_profile">Create profile</string>
    <string name="defaultString" translatable="false">\?</string>
    <string name="dialogYea">Yes</string>
    <string name="dialogNo">Maybe later</string>
    <string name="difficulty">Difficulty: %1$s</string>
    <string name="difficultyHard">hard</string>
    <string name="difficultyNormal">normal</string>
    <string name="email_address_enter">Enter your email address:</string>
    <string name="email_address_hint">your email address</string>
    <string name="email">email:\t %1$s</string>
    <string name="eu_consent_text">Dear user!\n\nWe use Google Admob to show ads. Ads support our work, and enable further development of this app. In line with the new European Data Protection Regulation (GDPR), we need your consent to serve ads tailored for you.</string>
    <string name="eu_consent_question">Can your data be used to show ads tailored for you?</string>
    <string name="eu_learn_more"><u>Learn how your data is used</u></string>
    <string name="eu_consent_no">No, show ads that are irrelevant</string>
    <string name="eu_google_partners">Google and its advertising partners:</string>
    <string name="eu_consent_remove_ads">Buy ad-free app version</string>
    <string name="eu_consent_yes">Yes, continue to show relevant ads</string>
    <string name="eu_consent_change_setting">You can change this setting anytime in the \"About\" section.</string>
    <string name="eu_thank_you">Thank you!</string>
    <string name="faqsAvailableQLangs"><b>Available languages for questions</b></string>
    <string name="faqsAvailableQLangsDesc">- English (available for all questions) \n
        - German (available for all questions) \n
        - Russian (available for all questions) \n
        \nThe language of the questions can be changed in your Profile settings
    </string>
    <string name="faqsLockedSectionsLbl">Locked sections</string>
    <string name="faqsLockedSections">After installing the app, some sections are locked. Locked sections are identified by the ???. With increasing score app functions will be unlocked bit by bit. Noticeable are scores at 90, 120 …</string>
    <string name="faqsPoints"><b>Points</b></string>
    <string name="faqsPointsDesc">For each correctly answered question you get 1 point. For fast answers there are extra points. For answers within 11 seconds on Normal difficulty level, you get 1.5 points for each
        correctly answered question. Hard difficulty gives 2 points for each correct answer within 15 seconds.</string>
    <string name="metal_gear_solid_1">Metal Gear Solid 1</string>
    <string name="metal_gear_solid_2">Metal Gear Solid 2</string>
    <string name="metal_gear_solid_3">Metal Gear Solid 3</string>
    <string name="metal_gear_solid_4">Metal Gear Solid 4</string>
    <string name="metal_gear_solid_5">Metal Gear Solid 5</string>
    <string name="metal_gear_solid_expert">Expert Quiz</string>
    <string name="passwordForgotDesc"><b>Have you forgot your password?</b>\n\nPlease enter your e-mail address and tap on the button reset password.</string>
    <string name="passwordReset">reset password</string>
    <string name="rate_app">Rate App</string>
    <string name="rate_title">Rate this app</string>
    <string name="rate_message">If you enjoy playing MGS Quiz, would you mind taking a moment to rate it? \nThanks for your support!</string>
    <string name="tagHard" translatable="false">Hard</string>
    <string name="tagNormal" translatable="false">Normal</string>
    <string name="tagMGS1" translatable="false">MGS 1</string>
    <string name="tagMGS2" translatable="false">MGS 2</string>
    <string name="tagMGS3" translatable="false">MGS 3</string>
    <string name="tagMGS4" translatable="false">MGS 4</string>
    <string name="tagMGS5" translatable="false">MGS 5</string>
    <string name="tagExpert" translatable="false">all</string>
</resources>