<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AboutActivity">

    <TextView
        android:id="@+id/aboutTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aboutTitle"
        android:textStyle="bold|italic"
        android:textSize="22sp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/aboutTitle"
        android:layout_marginTop="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:padding="8dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/aboutLblSupportApp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/etGrey"
                style="@style/faqs"
                android:textStyle="bold"
                android:layout_marginTop="8dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:text="@string/aboutSupportApp"/>
            <TextView
                android:id="@+id/aboutTVSupportAppDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/faqs"
                android:text="@string/aboutSupportAppDesc"
                android:visibility="gone"/>
            <TextView
                android:id="@+id/aboutTVSupportAppLink"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/faqs"
                android:textStyle="italic"
                android:text="@string/aboutSupportAppLink"
                android:visibility="gone"/>


            <TextView
                android:id="@+id/aboutLblResetAds"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/etGrey"
                style="@style/faqs"
                android:layout_marginTop="8dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:textStyle="bold"
                android:text="@string/aboutAdsResetTitle"
                android:visibility="gone"/>
            <TextView
                android:id="@+id/aboutTVResetAdsDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/faqs"
                android:text="@string/aboutAdsResetDesc"
                android:visibility="gone"/>
            <TextView
                android:id="@+id/aboutResetAds"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/faqs"
                android:textStyle="italic"
                android:text="@string/aboutAdsReset"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/aboutLblRateApp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/etGrey"
                style="@style/faqs"
                android:layout_marginTop="8dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:text="@string/rate_title"
                android:textStyle="bold"
                />
            <TextView
                android:id="@+id/aboutRateAppMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/faqs"
                android:text="@string/rate_message"
                android:visibility="gone"/>
            <TextView
                android:id="@+id/aboutRateAppShow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/faqs"
                android:textStyle="italic"
                android:text="@string/rate_app"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/aboutLblUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/etGrey"
                style="@style/faqs"
                android:layout_marginTop="8dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:text="@string/aboutUsername"/>
            <TextView
                android:id="@+id/aboutTVUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/faqs"
                android:text="@string/aboutUsernameDesc"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/aboutLblEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/etGrey"
                style="@style/faqs"
                android:layout_marginTop="8dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:text="@string/aboutEmail"/>
            <TextView
                android:id="@+id/aboutTVEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/faqs"
                android:text="@string/aboutEmailDesc"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/aboutLblBirthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/etGrey"
                style="@style/faqs"
                android:layout_marginTop="8dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:text="@string/aboutBirthday"/>
            <TextView
                android:id="@+id/aboutTVBirthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/faqs"
                android:text="@string/aboutBirthdayDesc"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/aboutLblDeleteProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/etGrey"
                style="@style/faqs"
                android:layout_marginTop="8dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:text="@string/aboutDeleteProfile"/>
            <TextView
                android:id="@+id/aboutTVDeleteProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/faqs"
                android:text="@string/aboutDeleteProfileDesc"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/aboutLblStoredData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/etGrey"
                style="@style/faqs"
                android:layout_marginTop="8dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:text="@string/aboutWhatDataStored"/>
            <TextView
                android:id="@+id/aboutTVStoredData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/faqs"
                android:text="@string/aboutWhatDataStoredDesc"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/aboutLblContact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/etGrey"
                style="@style/faqs"
                android:layout_marginTop="8dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:text="@string/aboutContact"/>
            <TextView
                android:id="@+id/aboutTVContact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/faqs"
                android:text="@string/aboutContactDesc"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/aboutLblOther"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/etGrey"
                style="@style/faqs"
                android:layout_marginTop="8dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:text="@string/aboutOther"/>
            <TextView
                android:id="@+id/aboutTVOther"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/faqs"
                android:text="@string/aboutOtherDesc"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/aboutLblPrivacyPolicy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/etGrey"
                style="@style/faqs"
                android:layout_marginTop="8dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:textStyle="bold"
                android:text="@string/aboutPrivacyPolicy"/>
            <TextView
                android:id="@+id/aboutPrivacyPolicyDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/faqs"
                android:text="@string/aboutPrivacyPolicyDesc"
                android:visibility="gone"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="100dp" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>