<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:id="@+id/eu_consent_ll"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_horizontal_margin"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eu_consent_text"
            android:textSize="16sp"
            android:textColor="@android:color/holo_green_dark"
            android:paddingBottom="6dp"
            android:gravity="center"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eu_consent_question"
            android:textSize="16sp"
            android:textColor="@android:color/holo_green_dark"
            android:gravity="center"
            android:paddingBottom="6dp"
            android:textStyle="bold"
            />

        <Button
            android:id="@+id/eu_consent_yes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/eu_consent_yes"
            android:textSize="15sp"
            android:textAllCaps="false"
            android:background="@color/blueLight"
            />

        <Button
            android:id="@+id/eu_consent_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/eu_consent_no"
            android:textSize="15sp"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="6dp"
            android:textAllCaps="false"
            android:background="@color/blueLight"
            />

        <Button
            android:id="@+id/euConsentRemoveAds"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/eu_consent_remove_ads"
            android:textSize="15sp"
            android:textAllCaps="false"
            android:background="@color/blueLight"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eu_consent_change_setting"
            android:textSize="16sp"
            android:textColor="@android:color/holo_green_dark"
            android:paddingTop="6dp"
            android:paddingBottom="6dp"
            />

        <TextView
            android:id="@+id/euConsentLearnMore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eu_learn_more"
            android:textSize="14sp"
            android:ellipsize="marquee"
            android:fadingEdge="horizontal"
            android:paddingTop="6dp"
            android:paddingBottom="6dp"
            android:textColor="@android:color/holo_blue_dark"
            />
    </LinearLayout>
</ScrollView>