<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ForgotPasswordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/fpwAppNameTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            style="@style/header"
            android:text="@string/app_name"/>

        <TextView
            android:id="@+id/fpwForgotPWDescTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:textSize="@dimen/text18"
            android:text="@string/passwordForgotDesc"
            android:gravity="center"/>

        <EditText
            android:id="@+id/fpwWmailET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text18"
            android:layout_marginTop="48dp"
            android:hint="@string/email_address_hint"
            android:inputType="textEmailAddress"/>

        <Button
            android:id="@+id/fpwResetPWBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            style="@style/btnBlack"
            android:text="@string/passwordReset" />

        <TextView
            android:id="@+id/fpwErrorTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textStyle="italic"
            android:textSize="@dimen/text18"
            android:gravity="center"/>
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fpwFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@drawable/ic_arrow_back_black_24dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>